# ml-from-scratch

./: .gitignore  README.md  pyproject.toml  utils.py
k-means-clustering/: README.md  k_means_clustering.py  test_model.ipynb  test_model_2.ipynb  test_model_3.ipynb
linear-regression/: README.md  linear_regression.py  test_model_2.ipynb
logistic-regression/: README.md  logistic_regression.py
tests/: conftest.py  test_k_means_clustering.py  test_linear_regression.py  test_logistic_regression.py
