[project]
name = "ml-from-scratch"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["numpy"]

[project.optional-dependencies]
notebooks = [
  "notebook",
  "matplotlib",
  "plotly",
  "scikit-learn"
]
dev = ["pytest"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["utils"]
